2008-01-23  Paul Eggert  <eggert@cs.ucla.edu>

	* src/side.c (print_half_line): Don't convert to unsigned char
	unnecessarily.

	Don't mishandle multibyte characters in side-by-side format.
	Problem reported by Erik Karlsson in
	<http://lists.gnu.org/archive/html/bug-gnu-utils/2008-01/msg00030.html>.
	* bootstrap.conf (gnulib_modules): Add wcwidth.
	* src/side.c: Include <wchar.h>.
	(print_half_line): Compute number of bytes and print widths of
	multibyte characters.  Inspired by an alternative solution from
	Bruno Haible in
	<http://lists.gnu.org/archive/html/bug-gnu-utils/2008-01/msg00032.html>.

2007-12-04  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: New diff option --suppress-blank-empty (no longer -u default).
	* doc/diff.texi (Detailed Unified): Trailing spaces are no longer
	omitted.
	(Trailing Blanks): New section.
	(diff Options) Mention new option.
	* src/diff.h (suppress_blank_entry): New decl.
	* src/context.c (pr_unidiff_hunk): Support --suppress-blank-empty.
	* src/util.c (print_1_line): Likewise.
	* src/diff.c (longopts, main, option_help_msgid): Likewise.
	(SUPPRESS_BLANK_EMPTY_OPTION): New constant.

	* configure.ac: Invoke gl_USE_SYSTEM_EXTENSIONS after gl_EARLY,
	since gnulib now requires this order.

	* bootstrap: Import from gnulib.

2007-08-17  Paul Eggert  <eggert@cs.ucla.edu>

	Break out diffseq.h into a separate file, so that gettext can use
	this code.  Idea and code from Bruno Haible.
	* bootstrap.conf (gnulib_modules): Add diffseq.
	* src/analyze.c (xvec, yvec, fdiag, bdiag, too_expensive, SNAKE_LIMIT):
	(struct partition, diag, compareseq): Remove; now in diffseq.h.
	(ELEMENT, EQUAL, OFFSET, EXTRA_CONTEXT_FIELDS, NOTE_DELETE, NOTE_INSERT):
	(USE_HEURISTIC): New macros.
	Include "diffseq.h".
	(diff_2_files): Rewrite to use new diffseq.h interface.

	* bootstrap: Import from gnulib.

2007-08-15  Paul Eggert  <eggert@cs.ucla.edu>

	* src/diff.c (compare_files): Use last_component rather than base_name,