@@ -1,3 +1,8 @@
+2008-01-24  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* src/side.c [!HAVE_MBRTOWC]: Supply defns for mbstate_t and mbrtowc.
+	Problem reported by Bruno Haible.
+
 2008-01-23  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* src/side.c (print_half_line): Don't convert to unsigned char
